# python_class

./: .gitignore  README.md
class1/: test.py
class2/: data_type_list.py  data_type_map.py  data_type_set.py  data_type_string.py  data_type_tuple.py
class3/: conditions2.py
class4/: conditions.py  for_loop.py  while_loop.py
class5/: age_culculator.py  converter.py  first_function.py  full_function.py  function_caller.py  math_function.py
class6/: README.md  pyproject.toml
class6/functions_by_aizhan_user/: math_functions.py
class6/test/: test.py
class7/:  data.json  json_parser_function.py
class8/: iam_tag.py
