[tool.poetry]
name = "functions-by-aizhan-user"
version = "0.3.0"
description = "This is our test project"
authors = ["Aizhan Myrzakimova <amyrzakimova@gmail.com>"]
readme = "README.md"
packages = [{include = "functions_by_aizhan_user"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
